--- a/src/Components/ProjectSpace/ProjectSpace.css
+++ b/src/Components/ProjectSpace/ProjectSpace.css
@@ -107,12 +107,12 @@
     left: 600px;
 }
 
-.features ul {
+.features1 ul {
     padding: 0;
     margin-left: 11px;
 }
 
-.features ul li {
+.features1 ul li {
     margin-left: 10px;
     list-style: none;
     text-align: left;
@@ -145,11 +145,11 @@
     font-family: lato sans-serif
 }
 
-.pricing-table1 .features .feature {
+.pricing-table1 .features1 .feature {
     font-weight: 600;
 }
 
-.pricing-table1 .features h4 {
+.pricing-table1 .features1 h4 {
     text-align: left;
     font-size: 15px;
     padding: 5px;
