--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,7 +219,7 @@ h6 {
     width: 100%;
     /* height: 70vh; */
     position: relative;
-    background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
+    background: url("../img/intro-carousel/bg_new.png") no-repeat;
     background-size: cover;
     border-bottom: 3px solid #a5215d;
 }
