corrected toggling of tabs in main.js

--- a/src/Components/User-roll/user-role.css
+++ b/src/Components/User-roll/user-role.css
@@ -62,3 +62,21 @@
     font-size: 17px;
     color: black;
 }
+
+.button9 {
+    background-color: #a521bd;
+    font-size: 13px;
+    /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 7px;
+    width: 80px;
+    height: 30px;
+    margin-left: 140px;
+    margin-top: 30px;
+    position: relative;
+    bottom: 10px;
+}
