how it works-border+transition

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1458,6 +1458,8 @@ p.help-block li {
     opacity: 1;
     background: white;
     transform: scale(1.05);
+    transition: 0.3s;
+    box-shadow:0px 6px 10px #acacac;
 }
 
 .features ul {
