--- a/src/Components/ProjectSpace/ProjectSpace.css
+++ b/src/Components/ProjectSpace/ProjectSpace.css
@@ -20,18 +20,18 @@
     background: black;
 }
 
-.pricing-table1 .projectdetailbox {
+.pricing-table1 .container .projectdetailbox {
     height: 80px;
     background-color: black;
-    margin: 0 5px 0;
-    max-width: 100%;
-    padding-left: 0px;
+    margin-left: -15px;
+    width: 1500px;
 }
 
 .projectdetailbutton {
     color: #a1a1a1;
     font-size: 18px;
-    margin-block-start: 50px;
+    margin-left: 10px;
+    margin-block-start: 25px;
     background-color: black;
     border: solid 0px black;
 }
@@ -47,8 +47,8 @@
 }
 
 .selecto1 {
-    width: 290px;
-    height: 480px;
+    width: 340px;
+    height: 400px;
     background-color: #fff;
 }
 
@@ -226,12 +226,12 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 13px;
-    width: 100px;
-    height: 30px;
-    margin-left: 850px;
+    font-size: 15px;
+    width: 250px;
+    height: 40px;
+    margin-left: 0px;
     position: relative;
-    border-radius: 7px;
+    border-radius: 5px;
 }
 
 .pricing-table1 {
@@ -245,6 +245,8 @@
     width: 100%;
     background-color: #e9e3e3;
 }
+
+
 
 .pricing-table1 .block-heading {
     padding-top: 10px;
@@ -281,6 +283,11 @@
     right: 10px;
 }
 
+.features2 .rightside1 {
+    position: absolute;
+    top: 2px;
+    right: 12px;
+}
 .side {
     padding-top: 10px;
 }
@@ -290,6 +297,7 @@
     margin-top: 0px;
     float: right;
     left: 600px;
+    text-align: right;
 }
 
 .features1 ul {
@@ -307,15 +315,29 @@
     line-height: 35px;
 }
 
+
+
+
 .features2 ul {
     padding: 10px;
     margin-left: 11px;
     font-size: 20px;
     font-weight: bold;
-    height: 300px;
+    height: 80px;
 }
 
-.features2 ul li {
+
+
+.features3 ul {
+    padding: 10px;
+    margin-left: 11px;
+    font-size: 20px;
+    font-weight: bold;
+    height: 200px;
+}
+
+.features2 ul li,
+.features3 ul li{
     margin-left: 11px;
     list-style: none;
     font-size: 15px;
@@ -324,10 +346,26 @@
 }
 
 .features2 p {
+    position: relative;
     text-align: start;
-    padding-left: 30px;
+    padding-left: 10px;
+    padding-bottom: 10px;
 }
 
+.features2 .skillbox ul{
+    margin-bottom: 2px;
+}
+
+.skillbox ul li {
+    list-style: none;
+    font-size: 18px;
+    display: inline;
+    border: 1px solid #837f7f;
+    padding: 2px 10px 2px 10px;
+    font-weight: normal;
+    
+    
+}
 .pricing-table1 .ribbon {
     width: 160px;
     height: 30px;
