--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1240,16 +1240,16 @@ p.help-block li {
 #contact .contact-info {
     margin-bottom: 20px;
     text-align: center;
+   padding-left: 25px;
 }
 
 #contact .contact-info i {
-    font-size: 24px;
+    font-size: 30px;
     display: inline-block;
     margin-bottom: 0;
     float: left;
-    background: #F44336;
     width: 36px;
-    color: #fff;
+    color: #A4215d;
     text-align: center;
     position: absolute;
     top: 0;
@@ -1295,6 +1295,10 @@ p.help-block li {
     position: relative;
     padding-left: 38px !important;
     float: left;
+}
+
+.feedbacklabel {
+    font-weight: bold;
 }
 
 @media (min-width: 768px) {
@@ -1364,17 +1368,21 @@ p.help-block li {
 }
 
 #contact .form button[type="submit"] {
-    background: #FF9800;
+    background: #A4215d;
     border: 0;
+    height:33px;
+    font-size: 15px;
     border-radius: 3px;
-    padding: 10px 30px;
+    padding: 10px 30px ;
     color: #fff;
+    align-content: center;
     transition: 0.4s;
     cursor: pointer;
+
 }
 
 #contact .form button[type="submit"]:hover {
-    background: #F44336;
+    background: #3a1f2b;
 }
 
 
@@ -1387,6 +1395,38 @@ p.help-block li {
     padding: 0 0 30px 0;
     font-size: 14px;
     color: #fff;
+}
+
+#footer ul li{
+    padding-top: 10px;
+    font-size: 15px;
+    font-weight: normal;
+    color: #fff;
+    list-style: none;
+    border: none;
+} 
+
+#footer ul{
+    
+    padding-top: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    list-style: none;
+}
+
+#footer ul .footerheading {
+    border-bottom: 2px solid white;
+} 
+
+#footer .footerlogo {
+    padding-top: 80px;
+    float: right;
+}
+
+#footer .footerlogo i{
+    font-size: 30px;
+    padding-left: 15px;
 }
 
 #footer .copyright {
