--- a/src/Components/ProjectSpace/ProjectSpace.css
+++ b/src/Components/ProjectSpace/ProjectSpace.css
@@ -234,6 +234,25 @@
     border-radius: 5px;
 }
 
+.button11 {
+    background-color: #6bae3e;
+    /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: bold;
+    width: 320px;
+    padding: 2px 4px 2px 4px;
+    height: 35px;
+    float: right;
+    margin-right: 10px;
+    position: relative;
+    border-radius: 5px;
+}
+
 .pricing-table1 {
     background-color: #fff;
     padding: 0px 0;
@@ -243,6 +262,7 @@
 .pricing-table1 .container {
     max-width: 1500px;
     width: 100%;
+    height: 2000px;
     background-color: #e9e3e3;
 }
 
@@ -281,6 +301,21 @@
     position: absolute;
     top: 2px;
     right: 10px;
+}
+
+.rightside2 {
+    position: relative;
+    top: -100px;
+    right: -250px;
+}
+
+.rightside2 p {
+    position: relative;
+    font-weight: bold;
+    margin-left: 0em;
+    top: -50px;
+    padding-left: 0px;
+    padding-top: 5px;
 }
 
 .features2 .rightside1 {
@@ -363,7 +398,20 @@
     border: 1px solid #837f7f;
     padding: 2px 10px 2px 10px;
     font-weight: normal;
-    
+}
+
+
+.skillbox1 ul li {
+    list-style: none;
+    color: #837f7f;
+    font-size: 15px;
+    display: inline;
+    border: 1px solid #837f7f;
+    margin-right: 5px;
+    font-weight: normal;
+    padding: 2px 4px 2px 4px;
+    position: relative;
+    top: -40px;
     
 }
 .pricing-table1 .ribbon {
